--- a/Relogio.project
+++ b/Relogio.project
@@ -92,5 +92,7 @@
   </Settings>
   <VirtualDirectory Name="src">
     <File Name="main.cpp"/>
+    <File Name="Relogio.h"/>
+    <File Name="Relogio.cpp"/>
   </VirtualDirectory>
 </CodeLite_Project>
